--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container"></div>
+      <div class="main-container">
+        <div class="back">
+          <img src="./assets/icons/arrow-left-02.svg" alt="Ícone de seta para esquerda de voltar">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matrícula</h1>
+        <p>
+          Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.
+        </p>
+      </div>
     </main>
 
     <aside>
-      <div class="aside-container"></div>
+      <div class="aside-container">
+
+          <img src="./assets/Logo.svg" alt="">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>
+            Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.
+          </p>
+
+        <img src="./assets/Illustration.svg" alt="Ilustração de uma professora desenhando com crianças">
+      </div>
     </aside>
   </div>
 </body>
