--- a/index.html
+++ b/index.html
@@ -105,13 +105,35 @@
               <label for="phone"></label>
               <input type="tel" name="phone" id="phone" placeholder="(00) 0 0000-0000">
             </div>
-            
+
             <div class="input-wrapper">
               <label for="email">E-mail</label>
               <input type="email" name="email" id="email" required>
               <div class="error">
                 <img src="./assets/icons/alert-circle.svg" alt="Ícone de exclamação indicando um erro no e-mail digitando.">
                 <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrícula</legend>
+            <div class="input-wrapper">
+              <label>Selecione o turno de estudo</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" id="morning" value="morning">
+                  <img src="./assets/icons/sun-cloud-02.svg" alt="Ícone de sol através de uma nuvem">
+                  <label for="morning">Manhã</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" id="evening" value="evening">
+                  <img src="./assets/icons/sun-02.svg" alt="Ícone de sol">
+                  <label for="evening">Tarde</label>
+                </div>
               </div>
             </div>
           </fieldset>
