corrigindo o nome de Maasculino para Masculino

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <label for="gender">Sexo</label>
               <select name="gender" id="gender">                
                 <option value="female">Feminino</option>
-                <option value="male">Maasculino</option>
+                <option value="male">Masculino</option>
                 <option value="na">Prefiro não responder</option>
               </select>
             </div>
